add some definition and commannd

--- a/database/makefile
+++ b/database/makefile
@@ -1,12 +1,16 @@
 COMPILE=g++
+CFLAGS= -c -fpermissive
+#fpermissive:ignore some nonformat code, put some errors into warnings.
 
-LIB=
-INC=
+LIB=-L./mysql/lib
+INC=-I./ -I./mysql/include
+LIB=-lmysqlclient
 
+OBJS=
 
 
 %.o:%.cpp
-	$(COMPILE) -c $^
+	$(COMPILE) $(FLAGS) $^ $(INC)
 
 .PHONY:clean
 clean:
